--- a/Core Data Journal/Core Data Journal/Base.lproj/Main.storyboard
+++ b/Core Data Journal/Core Data Journal/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
         <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="EntryDetailViewController" customModule="Core_Data_Journal" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="EntryDetail" id="BYZ-38-t0r" customClass="EntryDetailViewController" customModule="Core_Data_Journal" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
