--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -124,7 +124,11 @@
                         <viewLayoutGuide key="safeArea" id="Nfo-8W-GOU"/>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="A3V-fL-EsB">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="qaD-lT-C1r"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="qaD-lT-C1r">
+                            <connections>
+                                <action selector="saveButtonTapped:" destination="SfJ-vE-JXN" id="vFu-bh-rFi"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="l2R-MZ-WRO" id="re3-Qz-5AQ"/>
@@ -153,6 +157,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="82Q-xU-6Sn"/>
+        <segue reference="4jB-Ni-RC8"/>
     </inferredMetricsTieBreakers>
 </document>
