--- a/Journal/Journal/Base.lproj/LaunchScreen.storyboard
+++ b/Journal/Journal/Base.lproj/LaunchScreen.storyboard
@@ -1,82 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="C5f-7W-nXn">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes>
-        <!--Journal-->
-        <scene sceneID="Es5-AA-RPU">
-            <objects>
-                <tableViewController id="CTV-UQ-Cmu" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="FWr-lb-b2O">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="JournalCell" id="ERR-dO-uJd">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ERR-dO-uJd" id="Jco-dh-MIo">
-                                    <rect key="frame" x="0.0" y="0.0" width="376" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="hfq-rv-QGM" kind="push" identifier="JouranlSegue" id="we9-yb-rse"/>
-                                </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="CTV-UQ-Cmu" id="f7g-oZ-VBm"/>
-                            <outlet property="delegate" destination="CTV-UQ-Cmu" id="ev4-gO-xoZ"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Journal" id="hdY-JT-mIG"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="3xW-vP-HBO" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="844.92753623188412" y="346.875"/>
-        </scene>
-        <!--Create Entry-->
-        <scene sceneID="voo-cu-QLe">
-            <objects>
-                <viewController id="hfq-rv-QGM" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="9Qa-CF-iLf">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="nbT-ps-Bfl"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Create Entry" id="n0S-3m-3GZ">
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="Gbf-Fv-Hfl"/>
-                    </navigationItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6xs-13-nVJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1786" y="347"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="XEF-fU-yZv">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="C5f-7W-nXn" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="2F0-cL-o0K">
-                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="CTV-UQ-Cmu" kind="relationship" relationship="rootViewController" id="6ob-ro-3dN"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="JtG-QF-pUr" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-65.217391304347828" y="346.875"/>
-        </scene>
-    </scenes>
+    <scenes/>
 </document>
