--- a/JournalCoreDataHW/JournalCoreDataHW/Base.lproj/Main.storyboard
+++ b/JournalCoreDataHW/JournalCoreDataHW/Base.lproj/Main.storyboard
@@ -10,23 +10,63 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--Entry List-->
         <scene sceneID="uHM-av-YU0">
             <objects>
-                <tableViewController id="1GD-CQ-jgS" sceneMemberID="viewController">
+                <tableViewController id="1GD-CQ-jgS" customClass="EntriesTableViewController" customModule="JournalCoreDataHW" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="kSK-rf-6aA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" id="oLq-cl-fLk">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="JournalCell" id="oLq-cl-fLk" customClass="EntryTableViewCell" customModule="JournalCoreDataHW" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oLq-cl-fLk" id="Elk-fz-8gF">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="89.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="nS5-4X-IaQ">
+                                            <rect key="frame" x="20" y="11" width="374" height="30"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PN0-XQ-Smz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="271" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time STamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MEO-70-v6h">
+                                                    <rect key="frame" x="279" y="0.0" width="95" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="Uqz-Ln-SHs"/>
+                                            </constraints>
+                                        </stackView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DtW-Zy-6tr">
+                                            <rect key="frame" x="20" y="49" width="374" height="30"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="DtW-Zy-6tr" firstAttribute="trailing" secondItem="Elk-fz-8gF" secondAttribute="trailingMargin" id="4Xh-Lm-j9F"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="nS5-4X-IaQ" secondAttribute="trailing" id="6Je-4J-LbQ"/>
+                                        <constraint firstItem="DtW-Zy-6tr" firstAttribute="bottom" secondItem="Elk-fz-8gF" secondAttribute="bottomMargin" id="EMi-Ad-cjb"/>
+                                        <constraint firstItem="nS5-4X-IaQ" firstAttribute="top" secondItem="Elk-fz-8gF" secondAttribute="topMargin" id="WYc-Vg-1SN"/>
+                                        <constraint firstItem="nS5-4X-IaQ" firstAttribute="leading" secondItem="Elk-fz-8gF" secondAttribute="leadingMargin" id="aoB-U2-LJC"/>
+                                        <constraint firstItem="DtW-Zy-6tr" firstAttribute="leading" secondItem="Elk-fz-8gF" secondAttribute="leadingMargin" id="gMC-sa-RkZ"/>
+                                        <constraint firstItem="DtW-Zy-6tr" firstAttribute="top" secondItem="nS5-4X-IaQ" secondAttribute="bottom" constant="8" id="ucT-uZ-KFL"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="bodyLabel" destination="DtW-Zy-6tr" id="LrH-Qy-CkH"/>
+                                    <outlet property="entryTitlelabel" destination="PN0-XQ-Smz" id="QWs-qT-NZd"/>
+                                    <outlet property="timestampLabel" destination="MEO-70-v6h" id="g7V-2J-Rvt"/>
                                     <segue destination="T2P-qT-yh4" kind="show" identifier="CellSegue" id="Kbv-Ry-bTw"/>
                                 </connections>
                             </tableViewCell>
@@ -36,7 +76,7 @@
                             <outlet property="delegate" destination="1GD-CQ-jgS" id="2oz-rI-1GN"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="mTn-ck-M3b">
+                    <navigationItem key="navigationItem" title="Entry List" id="mTn-ck-M3b">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="QVz-gn-7wO">
                             <connections>
                                 <segue destination="T2P-qT-yh4" kind="show" identifier="AddSegue" id="1Sh-Ds-8I4"/>
@@ -46,7 +86,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B3Q-BQ-Kps" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="680" y="151"/>
+            <point key="canvasLocation" x="679.71014492753625" y="150.66964285714286"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="GjF-L7-1A8">
@@ -67,8 +107,8 @@
         <scene sceneID="7qz-Ki-iyu">
             <objects>
                 <navigationController id="RFu-s5-nNr" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="IE8-Fb-TDb">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="IE8-Fb-TDb">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
