--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -19,12 +19,57 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="QrH-dB-YwQ">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="75" id="QrH-dB-YwQ" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="414" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="QrH-dB-YwQ" id="we8-lg-PbM">
-                                    <rect key="frame" x="0.0" y="0.0" width="376" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="74.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="J0D-Uq-glD">
+                                            <rect key="frame" x="20" y="11" width="374" height="53"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DlX-BQ-clO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="19.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Creative Title here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Oq-vH-TFB">
+                                                            <rect key="frame" x="0.0" y="0.0" width="239" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="12/21/89, 12:20 pm " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JNE-rf-BBv">
+                                                            <rect key="frame" x="247" y="0.0" width="127" height="19.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LabelLabelLabelLabelLabelLabelLabelLabelLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ziN-oA-zwo">
+                                                    <rect key="frame" x="0.0" y="32.5" width="374" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="ziN-oA-zwo" firstAttribute="leading" secondItem="J0D-Uq-glD" secondAttribute="leading" id="1MU-0A-YMQ"/>
+                                                <constraint firstAttribute="trailing" secondItem="DlX-BQ-clO" secondAttribute="trailing" id="4gM-Rf-1VN"/>
+                                                <constraint firstItem="DlX-BQ-clO" firstAttribute="leading" secondItem="J0D-Uq-glD" secondAttribute="leading" id="Byy-NE-mcT"/>
+                                                <constraint firstAttribute="bottom" secondItem="ziN-oA-zwo" secondAttribute="bottom" id="M7i-h1-Yd1"/>
+                                                <constraint firstAttribute="trailing" secondItem="ziN-oA-zwo" secondAttribute="trailing" id="Np5-NR-viN"/>
+                                                <constraint firstItem="DlX-BQ-clO" firstAttribute="top" secondItem="J0D-Uq-glD" secondAttribute="top" id="iko-rj-teu"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="J0D-Uq-glD" secondAttribute="trailing" id="3Gp-eJ-dgD"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="J0D-Uq-glD" secondAttribute="bottom" id="JOM-wC-KWo"/>
+                                        <constraint firstItem="J0D-Uq-glD" firstAttribute="top" secondItem="we8-lg-PbM" secondAttribute="topMargin" id="Pff-5d-tY7"/>
+                                        <constraint firstItem="J0D-Uq-glD" firstAttribute="leading" secondItem="we8-lg-PbM" secondAttribute="leadingMargin" id="uq2-jZ-XDE"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <segue destination="MQb-F5-t4K" kind="push" identifier="ViewJournalSegue" id="ydn-mm-OuH"/>
@@ -43,6 +88,11 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="bodyLabel" destination="ziN-oA-zwo" id="jOv-kF-Qn2"/>
+                        <outlet property="timestampLabel" destination="JNE-rf-BBv" id="x8C-3x-EXJ"/>
+                        <outlet property="titleLabel" destination="JNE-rf-BBv" id="Vdl-ke-sn6"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mba-KY-aly" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
