--- a/JournalCoreDataHW/JournalCoreDataHW/Base.lproj/Main.storyboard
+++ b/JournalCoreDataHW/JournalCoreDataHW/Base.lproj/Main.storyboard
@@ -88,16 +88,47 @@
             </objects>
             <point key="canvasLocation" x="679.71014492753625" y="150.66964285714286"/>
         </scene>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="GjF-L7-1A8">
             <objects>
-                <viewController id="T2P-qT-yh4" sceneMemberID="viewController">
+                <viewController id="T2P-qT-yh4" customClass="EntryDetailViewController" customModule="JournalCoreDataHW" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ELf-SI-v7H">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="G6e-xW-zKM">
+                                <rect key="frame" x="20" y="140" width="374" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="4IB-FJ-Xh6"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="t9X-Ew-WfW">
+                                <rect key="frame" x="20" y="178" width="374" height="250"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="z8a-gF-KeI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="t9X-Ew-WfW" firstAttribute="top" secondItem="G6e-xW-zKM" secondAttribute="bottom" constant="8" id="5gx-eB-GSj"/>
+                            <constraint firstItem="G6e-xW-zKM" firstAttribute="top" secondItem="Cl9-3z-MUd" secondAttribute="top" id="80A-gL-Ghv"/>
+                            <constraint firstItem="t9X-Ew-WfW" firstAttribute="leading" secondItem="Cl9-3z-MUd" secondAttribute="leading" constant="20" id="FeQ-Ul-RVc"/>
+                            <constraint firstItem="Cl9-3z-MUd" firstAttribute="trailing" secondItem="t9X-Ew-WfW" secondAttribute="trailing" constant="20" id="TEf-fa-sD2"/>
+                            <constraint firstItem="G6e-xW-zKM" firstAttribute="leading" secondItem="Cl9-3z-MUd" secondAttribute="leading" constant="20" id="tCa-wZ-voz"/>
+                            <constraint firstItem="Cl9-3z-MUd" firstAttribute="trailing" secondItem="G6e-xW-zKM" secondAttribute="trailing" constant="20" id="zJ9-In-N3R"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="Cl9-3z-MUd"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Title" id="E9M-3L-BDC">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="ev1-Is-dGi"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xhz-wy-QaX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
